Nuevo Widget WMS funcionando completo.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 		<!--[if IE 8]>
 			<link rel="stylesheet" href="css/ie.css">
 		<![endif]-->
+
+        <link rel="stylesheet" href="css/nuevosWidgets.css">
 	</head>
 	<body class="calcite app-loading no-touch">
 		<!-- Loading Indicator -->
