--- a/index.html
+++ b/index.html
@@ -42,37 +42,50 @@
                 </div>
                 <div class="pageBody">                    
                     <div class="contenedor">
-                        <form action="">
-                            <label>Autor:</label>
-                            <input type="text" ng-model="Autor" class="form-control" />
+                        <form name="inciForm" ng-submit="inciForm.$valid && crearincidencia()" novalidate>
+                            <fieldset class="form-group" style="width:100px">
+                                <label>Autor:</label>
+                                <input type="text" ng-model="Autor" class="form-control" required/>
+                            </fieldset>
 
-                            <label>Fecha:</label>
-                            <div class="row" ng-controller="DatepickerDemoCtrl">
-                            <div class="col-md-6">
-                                    <p class="input-group">
-                                        <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar" ></i></button>
-                                        <input type="text" class="form-control" datepicker-popup="yyyy/MM/dd" ng-model="dt" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />                                        
-                                    </p>
+                            <fieldset class="form-group" style="float:right">
+                                <label>Fecha:</label>
+                                <div class="row" ng-controller="DatepickerDemoCtrl">
+                                <div class="col-md-6">
+                                        <p class="input-group">
+                                            <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar" ></i></button>
+                                            <input type="date" class="form-control" datepicker-popup="yyyy/MM/dd" ng-model="dt" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" required/>                                        
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
+                            </fieldset>
                             
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <label>Problema:</label> <select class="form-control" ng-model="problema" ng-options="problem for problem in problemas"><option></option></select>
+                            <fieldset class="form-group">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <label>Problema:</label> <select class="form-control" ng-model="problema" ng-options="problem for problem in problemas" required><option></option></select>
+                                    </div>
                                 </div>
-                            </div>
+                            </fieldset>
 
-                            <label>Solución:</label>
-                            <input type="text" ng-model="Solucion" class="form-control" />
+                            <fieldset class="form-group">
+                                <label>Solución:</label>
+                                <input type="text" ng-model="Solucion" class="form-control" required/>
+                             </fieldset>
 
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <label>Matricula:</label> <select class="form-control" ng-model="Matricula" ng-options="matri for matri in matriculas"><option></option></select>
+                            <fieldset class="form-group">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <label>Matricula:</label> <select class="form-control" ng-model="Matricula" ng-options="matricula for matricula in matriculas" required><option></option></select>
+                                    </div>
                                 </div>
-                            </div>
+                            </fieldset>
+
+                            <fieldset class="form-group">
+                                <input class="btn btn-primary pull-right" type="submit" value="Submit" />
+                            </fieldset>
                         </form>
                     </div>
-                    <button type="button" class="btn btn-sm btn-primary" ng-click="OK()" >Ok</button>
                 </div>
             </div>
 
@@ -140,5 +153,16 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="js/ui-bootstrap-tpls-0.12.0.min.js" type="text/javascript"></script>
         <script src="js/incidenciasForm.js" type="text/javascript"></script>
+        <script>
+            function Popup(id) {
+                if (dojo.byId(id).style.display == "none") {
+                    dojo.byId(id).style.display = "block";
+                }
+
+                else {
+                    dojo.byId(id).style.display = "none";
+                }
+            }
+        </script>
 	</body>
 </html>
