--- a/index.html
+++ b/index.html
@@ -43,9 +43,13 @@
                 <div class="pageBody">                    
                     <div class="contenedor">
                         <form name="inciForm" ng-submit="inciForm.$valid && crearincidencia()" novalidate>
+                        <div class="control-group" ng-class="{true: 'error'}[submitted && inciForm.email.$invalid]">
                             <fieldset class="form-group" style="width:100px">
                                 <label>Autor:</label>
-                                <input type="text" ng-model="Autor" class="form-control" required/>
+                                <div class="controls">
+                                    <input name="autor" type="text" ng-model="Autor" class="form-control" required/>
+                                    <span class="help-inline" ng-show="submitted && inciForm.autor.$error.required">Olvidaste mencionar al Autor...</span>
+                                </div>
                             </fieldset>
 
                             <fieldset class="form-group" style="float:right">
@@ -54,7 +58,11 @@
                                 <div class="col-md-6">
                                         <p class="input-group">
                                             <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar" ></i></button>
-                                            <input type="date" class="form-control" datepicker-popup="yyyy/MM/dd" ng-model="dt" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" required/>                                        
+                                            <div class="controls">
+                                            <input name="fecha" type="date" class="form-control" datepicker-popup="yyyy/MM/dd" ng-model="dt" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" required/>
+                                                <span class="help-inline" ng-show="submitted && inciForm.fecha.$error.required">Olvidaste la fecha...</span>
+                                                <span class="help-inline" ng-show="submitted && inciForm.fecha.$error.date">Fecha no valida</span>
+                                            </div>                           
                                         </p>
                                     </div>
                                 </div>
@@ -63,26 +71,38 @@
                             <fieldset class="form-group">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <label>Problema:</label> <select class="form-control" ng-model="problema" ng-options="problem for problem in problemas" required><option></option></select>
+                                        <label>Problema:</label>
+                                        <div class="controls">
+                                            <select name="problema" class="form-control" ng-model="problema" ng-options="problem for problem in problemas" required><option></option></select>
+                                            <span class="help-inline" ng-show="submitted && inciForm.problema.$error.required">Selecciona un problema...</span>
+                                        </div>
                                     </div>
                                 </div>
                             </fieldset>
 
                             <fieldset class="form-group">
                                 <label>Solución:</label>
-                                <input type="text" ng-model="Solucion" class="form-control" required/>
+                                <div class="controls">
+                                    <input name="solucion" type="text" ng-model="Solucion" class="form-control" required/>
+                                    <span class="help-inline" ng-show="submitted && inciForm.solucion.$error.required">Olvidaste describir la solución...</span>
+                                </div>
                              </fieldset>
 
                             <fieldset class="form-group">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <label>Matricula:</label> <select class="form-control" ng-model="Matricula" ng-options="matricula for matricula in matriculas" required><option></option></select>
+                                        <label>Matricula:</label>
+                                        <div class="controls">
+                                            <select name="matricula" class="form-control" ng-model="Matricula" ng-options="matricula for matricula in matriculas" required><option></option></select>
+                                        <span class="help-inline" ng-show="submitted && inciForm.matricula.$error.required">Selecciona una matrícula...</span>
+                                        </div>
                                     </div>
                                 </div>
                             </fieldset>
+                            </div>
 
                             <fieldset class="form-group">
-                                <input class="btn btn-primary pull-right" type="submit" value="Submit" />
+                                <input class="btn btn-primary pull-right" type="submit" value="Submit" ng-click="submitted=true" />
                             </fieldset>
                         </form>
                     </div>
@@ -149,6 +169,7 @@
          });
 		</script>
         <script src="js/angular.min.js" type="text/javascript"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-messages.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="js/ui-bootstrap-tpls-0.12.0.min.js" type="text/javascript"></script>
