--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div id="mapDiv" dir="ltr">
 
          <!-- Formulario incidencias -->
-            <div id="incidenciasForm" ng-controller="incidenciasController as incidencia">
+            <div id="incidenciasForm" ng-controller="incidenciasController as incidencia" >
                 <div class="pageHeader bg roundedTop">
                     <div id="TituloIncidencia" class="fc" style="color: rgba(255, 255, 255, 0.9); padding-top:30px">Panel de Incidencias</div>
                 </div>
@@ -47,6 +47,16 @@
                     <div class="contenedor">
                         <form name="inciForm" ng-submit="inciForm.$valid && crearincidencia()" novalidate>
                         <div class="control-group" ng-class="{true: 'error'}[submitted && inciForm.email.$invalid]">
+                            <fieldset class="form-group" ng-hide="true">
+                                <div class="controls">
+                                    <input id="posx" type="text" ng-model="X" class="form-control"/>
+                                </div>
+                            </fieldset>
+                            <fieldset class="form-group" ng-hide="true">
+                                <div class="controls">
+                                    <input id="posy" type="text" ng-model="Y" class="form-control"/>
+                                </div>
+                            </fieldset>
                             <fieldset class="form-group" style="width:140px; float:left">
                                 <label>Autor:</label>
                                 <div class="controls">
@@ -62,7 +72,7 @@
                                         <p class="input-group">
                                             <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar" ></i></button>
                                             <div class="controls">
-                                            <input name="date" type="date" class="form-control" datepicker-popup="dd/MM/yyyy" ng-model="date" is-open="opened" datepicker-options="dateOptions" close-text="Close" required/>
+                                            <input name="date" type="text" class="form-control" datepicker-popup="dd/MM/yyyy" ng-model="date" is-open="opened" datepicker-options="dateOptions" close-text="Close" required/>
                                                 <span class="help-inline" ng-show="submitted && inciForm.date.$error.required">Olvidaste la fecha...</span>
                                                 <span class="help-inline" ng-show="submitted && inciForm.date.$error.date">Fecha no v&aacute;lida</span>
                                             </div>                           
@@ -170,75 +180,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="js/ui-bootstrap-tpls-0.12.0.min.js" type="text/javascript"></script>
-        <script src="js/incidenciasForm.js" type="text/javascript"></script>
-        <script>
-            function _Popup(id, map) {
-
-                var tb;
-                console.log(map);
-                require(["esri/toolbars/draw"], function(){
-                    tb = new esri.toolbars.Draw(drawmap);
-                    tb.on("draw-end", _DrawResults);
-                    tb.activate(esri.toolbars.Draw.POINT);
-                });
-
-                function _DrawResults(evt) {
-                    require([
-                    "esri/Color",
-                    "esri/graphic",
-                    "esri/symbols/SimpleLineSymbol",
-                    "esri/symbols/SimpleMarkerSymbol"
-                    ],
-                    function (Color, Graphic, SimpleLineSymbol, SimpleMarkerSymbol) {
-
-                        tb.deactivate();
-
-                        if (dojo.byId('incidenciasForm').style.display == "block") {
-                            dojo.byId('incidenciasForm').style.display = "none";
-                        }
-
-                        else {
-                            dojo.byId('incidenciasForm').style.display = "none";
-                        }
-
-                        // add the drawn graphic to the map
-                        var geometry = evt.geometry;
-
-                        var symbol = new SimpleMarkerSymbol(
-                            SimpleMarkerSymbol.STYLE_CIRCLE,
-                            12,
-                            new SimpleLineSymbol(
-                            SimpleLineSymbol.STYLE_NULL,
-                            new Color([0, 0, 255, 0.9]),
-                            1
-                            ),
-                            new Color([0, 0, 255, 0.5])
-                        );
-
-                        var graphicpoint = new Graphic(geometry, symbol);
-                        map.graphics.add(graphicpoint);
-                        console.log(map.graphics);
-
-                        _Popup(id, geometry);
-
-                    });
-
-                }
-
-                function _Popup(id, geometry) {
-                    
-                    if (dojo.byId(id).style.display == "none") {
-                        dojo.byId(id).style.display = "block";
-
-                    }
-
-                    else {
-                        dojo.byId(id).style.display = "none";
-                    }
-                }
-
-
-            }
-        </script>
+        <script src="js/incidenciasForm.js" type="text/javascript"></script>        
 	</body>
 </html>
