--- a/index.html
+++ b/index.html
@@ -46,17 +46,7 @@
                 <div class="pageBody">                    
                     <div class="contenedor">
                         <form name="inciForm" ng-submit="inciForm.$valid && crearincidencia()" novalidate>
-                        <div class="control-group" ng-class="{true: 'error'}[submitted && inciForm.email.$invalid]">
-                            <fieldset class="form-group" ng-hide="true">
-                                <div class="controls">
-                                    <input id="posx" type="text" ng-model="X" class="form-control"/>
-                                </div>
-                            </fieldset>
-                            <fieldset class="form-group" ng-hide="true">
-                                <div class="controls">
-                                    <input id="posy" type="text" ng-model="Y" class="form-control"/>
-                                </div>
-                            </fieldset>
+                        <div class="control-group" ng-class="{true: 'error'}[submitted && inciForm.email.$invalid]">                           
                             <fieldset class="form-group" style="width:140px; float:left">
                                 <label>Autor:</label>
                                 <div class="controls">
@@ -111,6 +101,7 @@
 
                             <div style="text-align:center; margin-left:auto; margin-right:auto">
                              <fieldset class="form-group">
+                                <input class="btn btn-primary pull-right" type="button" value="Cancel" ng-click="CancelIncidencia()" style="margin-left:5px; float:left"/>
                                 <input class="btn btn-primary pull-right" type="submit" value="Submit" ng-click="submitted=true" />
                             </div>
                         </form>
@@ -146,7 +137,7 @@
 			</div>
 
 		</div>
-
+        <script src="js/VariablesGlobales.js" type="text/javascript"></script>
 		<script type="text/javascript">
          var package_path = window.location.pathname.substring(0, window.location.pathname.lastIndexOf('/'));
          var dojoConfig = {
