--- a/index.html
+++ b/index.html
@@ -137,6 +137,17 @@
 			</div>
 
 		</div>
+        <div id="loginPanel" class="bg rounded shadow">
+            <div><button class="bg rounded">Login</button></div>
+            <div>Usuario: <span id="nombreUsuario"></span></div>
+        </div>
+
+        <div id="loginForm" class="bg rounded shadow">
+            <div class="lgformdiv">Usuario: <input type="text" id="inputUsuario" /></div>
+            <div  class="lgformdiv">Password: <input type="password" id="inputPassword"/></div>
+            <div  class="lgformdiv"><button class="lgfbuttons bg rounded">Cancel</button><button class="lgfbuttons bg rounded">Ok</button></div>
+        </div>
+
         <script src="js/VariablesGlobales.js" type="text/javascript"></script>
 		<script type="text/javascript">
          var package_path = window.location.pathname.substring(0, window.location.pathname.lastIndexOf('/'));
