--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                         <p class="input-group">
                                             <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar" ></i></button>
                                             <div class="controls">
-                                            <input name="date" type="text" class="form-control" datepicker-popup="dd/MM/yyyy" ng-model="date" is-open="opened" datepicker-options="dateOptions" close-text="Close" required/>
+                                            <input name="date" type="text" class="form-control" datepicker-popup="dd/MM/yyyy" ng-model="date" is-open="opened" datepicker-options="dateOptions" close-text="Close" readonly ng-click="open($event)" required/>
                                                 <span class="help-inline" ng-show="submitted && inciForm.date.$error.required">Olvidaste la fecha...</span>
                                                 <span class="help-inline" ng-show="submitted && inciForm.date.$error.date">Fecha no v&aacute;lida</span>
                                             </div>                           
