--- a/index.html
+++ b/index.html
@@ -109,6 +109,94 @@
                 </div>
             </div>
 
+        <!-- Formulario buscador -->
+            <div id="buscaForm" ng-controller="buscadorController as buscador" >
+                <div class="pageHeader bg roundedTop">
+                    <div id="TituloBuscador" class="fc" style="color: rgba(255, 255, 255, 0.9); padding-top:30px">Panel de Busqueda</div>
+                </div>
+                <div class="pageBody">                    
+                    <div class="contenedor">
+                        <form name="buscadorForm" ng-submit="buscadorForm && LanzarBuscador()" novalidate>
+                        <div class="control-group" ng-class="{true: 'error'}[submitted && buscadorForm.email.$invalid]">
+                                <fieldset class="form-group" id="FielsetProvincia" style="width:350px; float:left">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <label>Provincia:</label>
+                                        <div class="controls">
+                                            <select name="Provincia" class="form-control" ng-model="provincia" ng-options="provincia for provincia in provincias" ><option></option></select>
+                                        </div>
+                                    </div>
+                                </div>
+                            </fieldset>
+                            <fieldset id="FielsetMunicipio" class="form-group" style="width:530px; margin-right:10px">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <label>Municipio:</label>
+                                        <div class="controls">
+                                            <select name="Municipio" class="form-control" ng-model="municipio" ng-options="municipio for municipio in municipios" ><option></option></select>
+                                        </div>
+                                    </div>
+                                </div>
+                            </fieldset>
+                            <fieldset id="FielsetPoblacion" class="form-group" >
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <label>Poblaci&oacute;n:</label>
+                                        <div class="controls">
+                                            <select name="poblacion" class="form-control" ng-model="poblacion" ng-options="poblacion for poblacion in poblaciones" ><option></option></select>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </fieldset>
+                            <fieldset class="form-group" id="FielsetCarretera">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <label>Carretera:</label>
+                                        <div class="controls">
+                                            <select name="carretera" class="form-control" ng-model="carretera" ng-options="carretera for carretera in carreteras">
+                                                <option></option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                            </fieldset>
+                            <fieldset class="form-group" id="FielsetPK">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <label>PK:</label>
+                                        <div class="controls">
+                                            <select name="PK" class="form-control" ng-model="PK" ng-options="pk for pk in pks">
+                                                <option></option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                            </fieldset>
+                            <fieldset class="form-group" id="FielsetLongitud" style="width:120px; float:left">
+                                <label>Longitud:</label>
+                                <div class="controls">
+                                    <input id="coordx" name="X" type="text" ng-model="Longitud" class="form-control"/>
+                                </div>
+                            </fieldset>
+                            <fieldset class="form-group" id="FielsetLatitud" style="width:120px">
+                                <label>Latitud:</label>
+                                <div class="controls">
+                                    <input name="Latitud" type="text" ng-model="Latitud" class="form-control"/>
+                                </div>
+                            </fieldset>
+                            </div>
+
+                            <div style="text-align: center; margin-left: auto; margin-right: auto">
+                                <fieldset class="form-group">
+                                    <input class="btn btn-primary pull-right" type="button" value="Cancel" ng-click="Cancelbusqueda()" style="margin-left: 5px; float: left" />
+                                    <input class="btn btn-primary pull-right" type="submit" value="Zoom" ng-click="submitted=true" />
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
         </div>
         
 
