--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
             <div id="divUsuario" class="oculto">Usuario: <span id="nombreUsuario"></span></div>
         </div>
 
-        <div id="loginForm" class="bg rounded shadow oculto">
-            <div class="lgformdiv">Usuario: <input class="loginInputs" type="text" id="inputUsuario" />jcm1</div>
+       <!-- <div id="loginForm" class="bg rounded shadow oculto">
+            <div class="lgformdiv">Usuario: <input class="loginInputs" type="text" id="inputUsuario" value="jcm1"/></div>
             <div  class="lgformdiv">Password: <input class="loginInputs" type="password" id="inputPassword"/></div>
             <div  class="lgformdiv"><button id="lgfCancelButton" class="lgfbuttons bg rounded">Cancel</button><button id="lgfOkButton" class="lgfbuttons bg rounded">Ok</button></div>
-        </div>
+        </div>-->
 
         <script src="js/VariablesGlobales.js" type="text/javascript"></script>
 		<script type="text/javascript">
