Modificaciones en herramienta buscador
Ahora ya funciona, el zoom a municipio y a Población

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <div class="contenedor">
                         <form name="buscadorForm" ng-submit="buscadorForm && LanzarBuscador()" novalidate>
                         <div class="control-group" ng-class="{true: 'error'}[submitted && buscadorForm.email.$invalid]">
-                                <fieldset class="form-group" id="FielsetProvincia" style="width:350px; float:left; margin-left:20px">
+                                <fieldset class="form-group" id="FielsetProvincia" style="width:350px; margin-left:20px">
                                 <div class="row">
                                     <div class="col-md-6">
                                         <label>Provincia:</label>
@@ -128,7 +128,7 @@
                                     </div>
                                 </div>
                             </fieldset>
-                            <fieldset id="FielsetMunicipio" class="form-group" style="width:490px; margin-right:20px">
+                            <fieldset id="FielsetMunicipio" class="form-group" style="width:490px; margin-left:20px">
                                 <div class="row">
                                     <div class="col-md-6">
                                         <label>Municipio:</label>
