--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
                             <fieldset class="form-group" style="width:350px; padding-left:80px">
                                 <label>Fecha:</label>
-                                <div class="row" ng-controller="DatepickerDemoCtrl">
+                                <!--div class="row" ng-controller="DatepickerDemoCtrl"-->
+                                <div class="row">
                                 <div class="col-md-6">
                                         <p class="input-group">
                                             <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar" ></i></button>
